feat: compare OpenAPI response examples
